feat: added background color for layouts

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body background="gray">
+  <body style="background-color:#E6AA78;">
     <h1> ADMINS BACKOFFICE LAYOUT </h1>
     <%= yield %>
   </body>
