--- a/app/views/layouts/profiles_backoffice.html.erb
+++ b/app/views/layouts/profiles_backoffice.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body background="gray">
+  <body style="background-color:#C5F78C;">
     <h1> PROFILES BACKOFFICE LAYOUT </h1>
     <%= yield %>
   </body>
