--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body style="background-color:#AAB4E7;">
     <h1> SITE LAYOUT </h1>
     <%= yield %>
   </body>
