fix: refactor profile to user layout

--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body style="background-color:#C5F78C;">
-    <h1> PROFILES BACKOFFICE LAYOUT </h1>
+    <h1> USERS BACKOFFICE LAYOUT </h1>
     <%= yield %>
   </body>
 </html>
