--- a/app/views/admins_backoffice/welcome/index.html.erb
+++ b/app/views/admins_backoffice/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>AdminsBackoffice::Welcome#index</h1>
 <p>Find me in app/views/admins_backoffice/welcome/index.html.erb</p>
+
+<%= button_to 'Logoff', destroy_admin_session_path, method: :delete, form: {data: {turbo_confirm: 'Are you sure?'}} %>
