--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Site::Welcome#index</h1>
 <p>Find me in app/views/site/welcome/index.html.erb</p>
+
+<%= button_to 'Login to Administrators', new_admin_session_path, method: :get %>
+<%= button_to 'Login to Users', new_user_session_path, method: :get %>
